--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Osiris/vendor/GLFW"]
 	path = Osiris/vendor/GLFW
 	url = https://github.com/PaulRichardHickman/glfw
+[submodule "osiris/vendor/imgui"]
+	path = osiris/vendor/imgui
+	url = https://github.com/PaulRichardHickman/imgui
