> Begin EditorUI Plugins

--- a/Apps/DevApp/imgui.ini
+++ b/Apps/DevApp/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=-104,99
-Size=1193,684
+Pos=25,9
+Size=439,391
 Collapsed=0
 
 [Window][Example: Constrained Resize]
@@ -42,4 +42,9 @@ Collapsed=0
 Pos=228,64
 Size=92,67
 Collapsed=0
+
+[Window][Resource Viewer]
+Pos=957,93
+Size=274,48
+Collapsed=1
 
