> Implemented texture object in core > Added a couple of simple test textures of different types > Added some template ImGui plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Osiris/vendor/imgui"]
 	path = Osiris/vendor/imgui
 	url = https://github.com/PaulRichardHickman/imgui
+[submodule "Osiris/vendor/soil"]
+	path = Osiris/vendor/soil
+	url = https://github.com/PaulRichardHickman/Simple-OpenGL-Image-Library.git
