--- a/Apps/DevApp/imgui.ini
+++ b/Apps/DevApp/imgui.ini
@@ -1,41 +1,11 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=58,71
+Size=1141,543
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=25,9
-Size=439,391
-Collapsed=0
-
-[Window][Example: Constrained Resize]
-Pos=60,99
-Size=687,254
-Collapsed=0
-
-[Window][Example: Console]
-Pos=387,56
-Size=520,600
-Collapsed=0
-
-[Window][ImGui Metrics]
-Pos=688,174
-Size=402,251
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=66,65
-Size=833,547
-Collapsed=0
-
-[Window][Example: Property editor]
-Pos=62,63
-Size=430,450
-Collapsed=0
-
-[Window][Example: Long text display]
-Pos=60,60
-Size=520,600
+Pos=540,35
+Size=726,678
 Collapsed=0
 
 [Window][Debug]
@@ -44,12 +14,22 @@ Size=92,67
 Collapsed=0
 
 [Window][Resource Viewer]
-Pos=957,93
-Size=297,124
+Pos=203,95
+Size=705,575
 Collapsed=0
 
 [Window][Scene Hierarchy Viewer]
+Pos=814,247
+Size=368,322
+Collapsed=0
+
+[Window][Game Viewer]
 Pos=60,60
-Size=441,338
+Size=318,187
+Collapsed=0
+
+[Window][Scene Editor]
+Pos=816,60
+Size=401,236
 Collapsed=0
 
