--- a/Apps/DevApp/imgui.ini
+++ b/Apps/DevApp/imgui.ini
@@ -4,7 +4,7 @@ Size=1141,543
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=540,35
+Pos=527,46
 Size=726,678
 Collapsed=0
 
@@ -14,8 +14,8 @@ Size=92,67
 Collapsed=0
 
 [Window][Resource Viewer]
-Pos=203,95
-Size=705,575
+Pos=486,152
+Size=680,380
 Collapsed=0
 
 [Window][Scene Hierarchy Viewer]
@@ -24,12 +24,22 @@ Size=368,322
 Collapsed=0
 
 [Window][Game Viewer]
-Pos=60,60
-Size=318,187
+Pos=308,189
+Size=647,232
 Collapsed=0
 
 [Window][Scene Editor]
 Pos=816,60
 Size=401,236
+Collapsed=0
+
+[Window][File Explorer]
+Pos=205,182
+Size=627,336
+Collapsed=0
+
+[Window][Project Explorer]
+Pos=152,257
+Size=877,296
 Collapsed=0
 
