Boiler plated the Utils class.

--- a/Apps/DevApp/imgui.ini
+++ b/Apps/DevApp/imgui.ini
@@ -4,9 +4,9 @@ Size=1141,543
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=527,46
+Pos=305,175
 Size=726,678
-Collapsed=0
+Collapsed=1
 
 [Window][Debug]
 Pos=228,64
@@ -30,8 +30,8 @@ Collapsed=0
 
 [Window][Scene Editor]
 Pos=724,41
-Size=401,236
-Collapsed=0
+Size=332,383
+Collapsed=1
 
 [Window][File Explorer]
 Pos=205,182
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Project Explorer]
 Pos=152,257
 Size=877,296
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
 Collapsed=0
 
