> Added LayerViewer > Removed a number of unused tools

--- a/Apps/DevApp/imgui.ini
+++ b/Apps/DevApp/imgui.ini
@@ -4,8 +4,8 @@ Size=1141,543
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=527,46
-Size=726,678
+Pos=106,140
+Size=605,510
 Collapsed=0
 
 [Window][Debug]
@@ -26,7 +26,7 @@ Collapsed=0
 [Window][Game Viewer]
 Pos=308,189
 Size=647,232
-Collapsed=0
+Collapsed=1
 
 [Window][Scene Editor]
 Pos=724,41
@@ -42,4 +42,64 @@ Collapsed=0
 Pos=152,257
 Size=877,296
 Collapsed=0
+
+[Window][Example: Console]
+Pos=267,80
+Size=520,600
+Collapsed=1
+
+[Window][System Info]
+Pos=955,25
+Size=320,180
+Collapsed=0
+
+[Window][Layer Viewer]
+Pos=919,269
+Size=315,207
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=204,72
+Size=652,437
+Collapsed=0
+
+[Window][Examples: Documents]
+Pos=60,60
+Size=617,714
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=297,61
+Size=292,560
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=449,61
+Collapsed=1
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=449,61
+Collapsed=1
+
+[Window][###AnimatedTitle]
+Pos=466,301
+Size=571,218
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=473,75
+Size=687,293
+Collapsed=0
+
+[Window][Application Layer Viewer]
+Pos=954,212
+Size=320,385
+Collapsed=1
 
