> Refactored the Scene and Project services into a single Workspace service

--- a/Apps/Editor/imgui.ini
+++ b/Apps/Editor/imgui.ini
@@ -5,26 +5,51 @@ Collapsed=0
 
 [Window][Toolbar]
 Pos=0,22
-Size=1726,32
+Size=1617,32
 Collapsed=0
 
 [Window][Asset Viewer]
-Pos=1102,594
+Pos=978,615
 Size=617,242
 Collapsed=0
 
 [Window][Properties]
-Pos=1401,62
+Pos=1295,70
 Size=307,353
-Collapsed=0
+Collapsed=1
 
 [Window][Sprite Layer Editor]
-Pos=4,58
-Size=282,909
+Pos=13,63
+Size=254,665
 Collapsed=0
 
 [Window][Scene Settings]
-Pos=1194,462
+Pos=1050,323
 Size=385,264
+Collapsed=1
+
+[Window][ImGui Demo]
+Pos=311,104
+Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=58,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=1081,638
+Collapsed=0
+
+[Window][ImGui Metrics]
+Pos=60,60
+Size=427,290
 Collapsed=0
 
