--- a/Apps/Editor/imgui.ini
+++ b/Apps/Editor/imgui.ini
@@ -9,18 +9,18 @@ Size=1617,32
 Collapsed=0
 
 [Window][Asset Viewer]
-Pos=978,615
+Pos=944,618
 Size=617,242
 Collapsed=0
 
 [Window][Properties]
-Pos=1295,70
+Pos=1301,74
 Size=307,353
-Collapsed=1
+Collapsed=0
 
 [Window][Sprite Layer Editor]
-Pos=13,63
-Size=254,665
+Pos=9,85
+Size=254,638
 Collapsed=0
 
 [Window][Scene Settings]
@@ -51,5 +51,10 @@ Collapsed=0
 [Window][ImGui Metrics]
 Pos=60,60
 Size=427,290
+Collapsed=0
+
+[Window][Scene Viewer]
+Pos=372,100
+Size=100,100
 Collapsed=0
 
