> Added Renderdoc integration -- Note: If renderdoc will only work if renderdoc x64 installed in default location prior to build

--- a/Apps/Editor/imgui.ini
+++ b/Apps/Editor/imgui.ini
@@ -5,17 +5,17 @@ Collapsed=0
 
 [Window][Toolbar]
 Pos=0,22
-Size=1613,32
+Size=1651,32
 Collapsed=0
 
 [Window][Asset Viewer]
-Pos=944,618
+Pos=1023,605
 Size=617,242
 Collapsed=0
 
 [Window][Properties]
-Pos=1301,73
-Size=307,353
+Pos=1330,64
+Size=311,533
 Collapsed=0
 
 [Window][Sprite Layer Editor]
@@ -56,5 +56,10 @@ Collapsed=0
 [Window][Scene Viewer]
 Pos=372,100
 Size=100,100
+Collapsed=0
+
+[Window][Preferences]
+Pos=456,276
+Size=574,400
 Collapsed=0
 
