> Added config.ini, Editor.args.json and imgui.ini from Verson Control due to the difference between machines. -> Note: all new settings should have defaulted values

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Osiris/vendor/*/bin-int/*
 *.vcxproj
 *.vcxproj.user
 /Apps/DevApp/imgui.ini
+Apps/Editor/config.ini
+Apps/Editor/Editor.args.json
+Apps/Editor/imgui.ini
