--- a/WyrdAPI/WyrdAPI.csproj
+++ b/WyrdAPI/WyrdAPI.csproj
@@ -24,7 +24,6 @@
     <DefineConstants>WYRD_PLATFORM_WINDOWS;WYRD_EDITOR_ENABLED;GLFW_INCLUDE_NONE;GLM_ENABLE_EXPERIMENTAL;WYRD_DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -37,7 +36,6 @@
     <DefineConstants>WYRD_PLATFORM_WINDOWS;WYRD_EDITOR_ENABLED;GLFW_INCLUDE_NONE;GLM_ENABLE_EXPERIMENTAL;WYRD_RELEASE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Distribution|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -50,8 +48,9 @@
     <DefineConstants>WYRD_PLATFORM_WINDOWS;WYRD_EDITOR_ENABLED;GLFW_INCLUDE_NONE;GLM_ENABLE_EXPERIMENTAL;WYRD_DISTRIBUTION</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <ItemGroup>
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="src\enums\InputEnums.cs" />
     <Compile Include="src\framework\Color.cs" />
@@ -60,16 +59,15 @@
     <Compile Include="src\framework\ScriptedEntity.cs" />
     <Compile Include="src\framework\Vector2.cs" />
     <Compile Include="src\framework\Vector3.cs" />
-    <Compile Include="src\scene\ecs\Component.cs" />
-    <Compile Include="src\scene\ecs\components\MetaDataComponent.cs" />
-    <Compile Include="src\scene\ecs\components\Transform2DComponent.cs" />
-    <Compile Include="src\scene\ecs\EntityManager.cs" />
-    <Compile Include="src\scene\ecs\components\SpriteComponent.cs" />
-    <Compile Include="src\scene\ecs\Entity.cs" />
     <Compile Include="src\scene\Scene.cs" />
+    <Compile Include="src\scene\ecs\Component.cs" />
+    <Compile Include="src\scene\ecs\Entity.cs" />
+    <Compile Include="src\scene\ecs\EntityManager.cs" />
+    <Compile Include="src\scene\ecs\components\MetaDataComponent.cs" />
+    <Compile Include="src\scene\ecs\components\SpriteComponent.cs" />
+    <Compile Include="src\scene\ecs\components\Transform2DComponent.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
