--- a/WyrdAPI/WyrdAPI.csproj
+++ b/WyrdAPI/WyrdAPI.csproj
@@ -58,7 +58,9 @@
     <Compile Include="src\framework\MathUtils.cs" />
     <Compile Include="src\framework\ScriptedEntity.cs" />
     <Compile Include="src\framework\Vector2.cs" />
+    <Compile Include="src\framework\Texture.cs" />
     <Compile Include="src\framework\Vector3.cs" />
+    <Compile Include="src\scene\ecs\ResourceManager.cs" />
     <Compile Include="src\scene\Scene.cs" />
     <Compile Include="src\scene\ecs\Component.cs" />
     <Compile Include="src\scene\ecs\Entity.cs" />
