--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Apps/Editor/imgui.ini
 Apps/Editor/error_output.txt
 externalbuild/bin/
 externalbuild/bin-int/
+buildsystem/bin/
+buildsystem/bin-int/
 lib/
 sub_modules/
 codegen/models/obj/
