--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,10 @@ Apps/Editor/config.ini
 Apps/Editor/Editor.args.json
 Apps/Editor/imgui.ini
 Apps/Editor/error_output.txt
-externalbuild/bin/
-externalbuild/bin-int/
 buildsystem/bin/
 buildsystem/bin-int/
+buildsystem/windows/bin/
+buildsystem/windows/bin-int/
 lib/
 sub_modules/
 codegen/models/obj/
