--- a/.github/workflows/wyrd-linux-library.yml
+++ b/.github/workflows/wyrd-linux-library.yml
@@ -13,18 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install dependencies
-      run: ./buildsystem/linux/install-dependencies.sh
-    - name: Install mono
-      run: ./buildsystem/linux/install-mono.sh
-    - name: Build premake5
-      run: ./buildsystem/linux/build-premake5.sh
-    - name: Build spdlog
-      run: ./buildsystem/linux/build-spdlog.sh
-    - name: Build uuid
-      run: ./buildsystem/linux/build-uuid.sh
-    - name: Build jsonxx
-      run: ./buildsystem/linux/build-jsonxx.sh
-    - name: Build wyrd
-      run: ./buildsystem/linux/build-wyrd.sh
-   
+    - name: Setup linux build environment
+      run: ./buildsystem/linux/setup-environment.sh
+    - name: Setup and build Wyrd 
+      run: ./buildsystem/linux/setup-wyrd.sh
+    
