--- a/WyrdAPI/WyrdAPI.csproj
+++ b/WyrdAPI/WyrdAPI.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>WYRD_PLATFORM_WINDOWS;WYRD_EDITOR_ENABLED;GLFW_INCLUDE_NONE;GLM_ENABLE_EXPERIMENTAL;WYRD_DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -36,6 +37,7 @@
     <DefineConstants>WYRD_PLATFORM_WINDOWS;WYRD_EDITOR_ENABLED;GLFW_INCLUDE_NONE;GLM_ENABLE_EXPERIMENTAL;WYRD_RELEASE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Distribution|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -48,6 +50,7 @@
     <DefineConstants>WYRD_PLATFORM_WINDOWS;WYRD_EDITOR_ENABLED;GLFW_INCLUDE_NONE;GLM_ENABLE_EXPERIMENTAL;WYRD_DISTRIBUTION</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
   </ItemGroup>
@@ -57,6 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\enums\InputEnums.cs" />
+    <Compile Include="src\framework\NativeManager.cs" />
+    <Compile Include="src\framework\NativeObject.cs" />
+    <Compile Include="src\framework\ResourceDescriptors.cs" />
     <Compile Include="src\framework\UID.cs" />
     <Compile Include="src\framework\Color.cs" />
     <Compile Include="src\framework\Input.cs" />
@@ -68,18 +74,19 @@
     <Compile Include="src\framework\interfaces\SceneManager.cs" />
     <Compile Include="src\scene\ecs\components\RelationshipComponent.cs" />
     <Compile Include="src\scene\ecs\components\ScriptComponent.cs" />
+    <Compile Include="src\scene\manager\ResourceManagerProxy.cs" />
+    <Compile Include="src\scene\manager\BehaviourManagerProxy.cs" />
     <Compile Include="src\scene\Scene.cs" />
     <Compile Include="src\scene\ecs\Component.cs" />
     <Compile Include="src\scene\ecs\Entity.cs" />
     <Compile Include="src\scene\ecs\EntityManager.cs" />
-    <Compile Include="src\scene\ecs\ResourceManager.cs" />
+    <Compile Include="src\scene\manager\PhysicsManagerProxy.cs" />
     <Compile Include="src\scene\ecs\components\MetaDataComponent.cs" />
     <Compile Include="src\scene\ecs\components\SpriteComponent.cs" />
     <Compile Include="src\scene\ecs\components\TextComponent.cs" />
     <Compile Include="src\scene\ecs\components\Transform2DComponent.cs" />
   </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
