--- a/WyrdGen/WyrdGen.csproj
+++ b/WyrdGen/WyrdGen.csproj
@@ -61,8 +61,12 @@
   <ItemGroup>
     <Compile Include="datamodels\ComponentDefintions.cs" />
     <Compile Include="datamodels\TypeMappingDefinitions.cs" />
-    <None Include="definitions\ComponentDefinitions.xml" />
-    <None Include="definitions\TypeMappingDefinitions.xml" />
+    <Content Include="definitions\ComponentDefinitions.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="definitions\TypeMappingDefinitions.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Compile Include="src\GeneratorUtils.cs" />
     <Compile Include="src\Managed\ManagedComponents_Gen.cs" />
     <Compile Include="src\Program.cs" />
@@ -73,6 +77,24 @@
     <Compile Include="src\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="templates\Components.cs.template">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\Components.h.template">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\ComponentSerialiserFactory.cpp.template">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\ComponentSerialiserFactory.h.template">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\PInvokeAPI.cpp.template">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\PInvokeAPI.h.template">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
