--- a/WyrdAPI/WyrdAPI.csproj
+++ b/WyrdAPI/WyrdAPI.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>WYRD_PLATFORM_WINDOWS;WYRD_EDITOR_ENABLED;GLFW_INCLUDE_NONE;GLM_ENABLE_EXPERIMENTAL;WYRD_DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -59,19 +60,22 @@
     <Compile Include="src\enums\InputEnums.cs" />
     <Compile Include="src\framework\Color.cs" />
     <Compile Include="src\framework\Input.cs" />
-    <Compile Include="src\framework\Model.cs" />
+    <Compile Include="src\framework\Material.cs" />
     <Compile Include="src\framework\MathUtils.cs" />
+    <Compile Include="src\framework\Matrix4.cs" />
+    <Compile Include="src\framework\Model.cs" />
     <Compile Include="src\framework\NativeManager.cs" />
     <Compile Include="src\framework\NativeObject.cs" />
     <Compile Include="src\framework\Rect.cs" />
     <Compile Include="src\framework\ResourceDescriptors.cs" />
     <Compile Include="src\framework\ScriptedEntity.cs" />
-    <Compile Include="src\framework\Material.cs" />
     <Compile Include="src\framework\Texture.cs" />
     <Compile Include="src\framework\UID.cs" />
     <Compile Include="src\framework\Vector2.cs" />
     <Compile Include="src\framework\Vector3.cs" />
     <Compile Include="src\framework\interfaces\SceneManager.cs" />
+    <Compile Include="src\scene\ecs\componentsEx\MaterialComponentEx.cs" />
+    <Compile Include="src\scene\manager\ManagerProxy.cs" />
     <Compile Include="src\scene\Scene.cs" />
     <Compile Include="src\scene\ecs\Component.cs" />
     <Compile Include="src\scene\ecs\Entity.cs" />
@@ -89,7 +93,6 @@
     <Compile Include="src\scene\ecs\components\Transform2DComponent.cs" />
     <Compile Include="src\scene\ecs\components\Transform3DComponent.cs" />
     <Compile Include="src\scene\manager\BehaviourManagerProxy.cs" />
-    <Compile Include="src\scene\manager\PhysicsManagerProxy.cs" />
     <Compile Include="src\scene\manager\ResourceManagerProxy.cs" />
   </ItemGroup>
   <ItemGroup>
