--- a/.github/workflows/wyrd-linux-library.yml
+++ b/.github/workflows/wyrd-linux-library.yml
@@ -9,12 +9,12 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup linux build environment
-      run: ./buildsystem/linux/setup-environment.sh
+    - name: Setup windows build environment
+      run: ./buildsystem/windows/setup-environment.sh
     - name: Setup and build Wyrd 
-      run: ./buildsystem/linux/setup-wyrd.sh
+      run: ./buildsystem/windows/setup-wyrd.bat
     
