--- a/.github/workflows/wyrd-linux-library.yml
+++ b/.github/workflows/wyrd-linux-library.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Setup windows build environment
       run: ./buildsystem/windows/setup-environment.bat
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.1 
     - name: Setup and build Wyrd 
       run: ./buildsystem/windows/setup-wyrd.bat
     
