--- a/WyrdGen/templates/Components.cs.template
+++ b/WyrdGen/templates/Components.cs.template
@@ -8,7 +8,7 @@ using System.Threading.Tasks;
 namespace WyrdAPI
 {
     [StructLayout(LayoutKind.Sequential)]
-    public class <!COMPONENT_NAME> : Component
+    public partial class <!COMPONENT_NAME> : Component
     {
 
 <!VARIABLES>
