--- a/WyrdGen/templates/Components.h.template
+++ b/WyrdGen/templates/Components.h.template
@@ -8,6 +8,7 @@
 #include "core/ResourcesUIDs.h"
 #include "core/maths/Rect.h"
 #include "core/ecs/ECS.h"
+#include "core/ecs/ComponentPool.h"
 
 #include <glm/glm.hpp>
 
