- Added debug options to premake on TestPlayer - Added creation of AssemblyInfo in behavioural build function - Added error message to test player to show invalid camera setup - Fixed hardcoded project path in testplayer start button

--- a/Apps/Editor/recentProject.json
+++ b/Apps/Editor/recentProject.json
@@ -11,6 +11,10 @@
 		{
 			"name": "TestProject_01",
 			"path": "C:\\Projects\\games\\TestProject_01\\TestProject_01.oproj" 
+		},
+		{
+			"name": "TestWorld",
+			"path": "C:\\Projects\\games\\TestWorld\\TestWorld\\TestWorld.oproj" 
 		} 
 	] 
 } 
