--- a/WyrdAPI/WyrdAPI.csproj
+++ b/WyrdAPI/WyrdAPI.csproj
@@ -95,6 +95,7 @@
     <Compile Include="src\scene\manager\ResourceManagerProxy.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
