--- a/Apps/Editor/recentProject.json
+++ b/Apps/Editor/recentProject.json
@@ -5,6 +5,10 @@
 			"path": "C:\\Projects\\games\\TempProject\\TempProject.oproj" 
 		},
 		{
+			"name": "TestCaseProject",
+			"path": "C:\\Projects\\games\\TestCaseProject\\TestCaseProject.oproj" 
+		},
+		{
 			"name": "TestVillage",
 			"path": "C:\\Projects\\games\\TestVillage\\TestVillage.oproj" 
 		} 
