> Resolve initial compliation issues on new environment

--- a/Apps/Editor/recentProject.json
+++ b/Apps/Editor/recentProject.json
@@ -9,6 +9,10 @@
 			"path": "C:\\Projects\\games\\TestCaseProject\\TestCaseProject.oproj" 
 		},
 		{
+			"name": "TestProject",
+			"path": "C:\\projects\\WyrdGames\\TestProject\\TestProject.oproj" 
+		},
+		{
 			"name": "TestVillage",
 			"path": "C:\\Projects\\games\\TestVillage\\TestVillage.oproj" 
 		} 
