> added shader stages for vs and fs

--- a/Apps/Editor/recentProject.json
+++ b/Apps/Editor/recentProject.json
@@ -1,6 +1,10 @@
 {
 	"projects": [
 		{
+			"name": "SampleProject",
+			"path": "C:\\Projects\\Wyrd\\WyrdGames\\SampleProject\\SampleProject.oproj" 
+		},
+		{
 			"name": "TestProject",
 			"path": "C:\\projects\\WyrdGames\\TestProject\\TestProject.oproj" 
 		} 
